05.deployment/03.istio/08.fault-injection/deployment-mouse-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mouse-catalog
  labels:
    app: mouse-catalog
    version: v1
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: mouse-catalog
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mouse-catalog
  labels:
    app: mouse-catalog
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mouse-catalog
      version: v1
  template:
    metadata:
      labels:
        app: mouse-catalog
        version: v1
    spec:
      containers:
        - name: mouse-catalog
          image: mouse-catalog:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
