05.deployment/03.istio/08.fault-injection/istio-mouse-reviews-virtualservice-with-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mouse-reviews-routing-service
spec:
  hosts:
    - mouse-reviews
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: mouse-reviews
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50.0
