05.deployment/03.istio/08.fault-injection/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mouse-catalog-routing-service
spec:
  hosts:
    - "*"
  gateways:
    - mouse-gateway
  http:
    - name: "catalog route"
      match:
        - uri:
            prefix: /mice/
        - uri:
            prefix: /mice
      route:
        - destination:
            host: mouse-catalog
      rewrite:
        uri: "/"
    - name: "reviews route"
      match:
        - uri:
            prefix: /reviews/
        - uri:
            prefix: /reviews
      route:
        - destination:
            host: mouse-reviews
      rewrite:
        uri: "/"
      fault:
        abort:
          percentage:
            value: 60.0
          httpStatus: 555
